--- a/auth/client/src/assets/styles.scss
+++ b/auth/client/src/assets/styles.scss
@@ -6,6 +6,8 @@ $base-line-height: 1.5;
 $base-font-family: Helvetica Neue;
 $base-font-family-fallback: sans-serif;
 
+@import '~react-pro-sidebar/dist/scss/styles.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -139,3 +141,5 @@ a {
     }
   }
 }
+
+
