--- a/auth/client/src/assets/styles.scss
+++ b/auth/client/src/assets/styles.scss
@@ -69,7 +69,7 @@ input {
   input {
     outline: 0;
     padding: 0.5rem 1rem;
-    color: white;
+    color: grey;
     font-size: 25px;
     &[type="email"],
     &[type="password"] {
