--- a/auth/client/src/assets/styles.scss
+++ b/auth/client/src/assets/styles.scss
@@ -107,7 +107,7 @@ a {
 }
 
 .register {
-  box-shadow: 0 0 20px #000;
+  box-shadow: 0 0 30px #000;
   text-align: center;
   padding: 4rem 2rem;
 
@@ -135,8 +135,12 @@ a {
     &[type="submit"] {
       background-image: linear-gradient(160deg, #8ceabb 0%, #378f7b 100%);
       color: #fff;
-      margin-bottom: 6rem;
       width: 100%;
+      cursor: pointer;
+
+      &[type="submit"]:hover{
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      }
     }
   }
 }
