Added Resource component that displays links to helpful resources and switches automatically based on language state

--- a/auth/client/src/components/editorComponents/editorstyles.css
+++ b/auth/client/src/components/editorComponents/editorstyles.css
@@ -35,7 +35,7 @@
     color: white;
 }
 .code-mirror-wrapper {
-    border: black;
+    border: 1px solid black;
 }
 .runButton {
     display: flex;
