--- a/auth/client/src/components/editorComponents/editorstyles.css
+++ b/auth/client/src/components/editorComponents/editorstyles.css
@@ -84,12 +84,11 @@
 }
 .ULlistJS {
     list-style: square;
-    background-color: #fcce69;
-    color: rgb(34, 34, 34);
+    background-color: #f9d485;
+    color: rgb(26, 26, 26);
     padding-bottom: 10px;
-    font-size: 18px;
-    border-bottom-left-radius: 2.5%;
-    border-bottom-right-radius: 2.5%;
+    font-size: 16px;
+   
 
 }
 
@@ -108,12 +107,11 @@
 
 .ULlistPY {
     list-style: square;
-    background-color: #ffd940;
-    color: #224c6d;
+    background-color: #ffe680;
+    color: #16354d;
     padding-bottom: 10px;
-    font-size: 18px;
-    border-bottom-left-radius: 2.5%;
-    border-bottom-right-radius: 2.5%;
+    font-size: 16px;
+   
 }
 
 .tipsDivSQL {
@@ -130,13 +128,12 @@
 }
 
 .ULlistSQL {
-    background-color: rgb(244, 244, 244);
+    background-color: #c5d8d6;
     color: #1f413c;
     list-style: square;
     padding-bottom: 10px;
-    font-size: 18px;
-    border-bottom-left-radius: 2.5%;
-    border-bottom-right-radius: 2.5%;
+    font-size: 16px;
+   
 }
 
 .tipsDivShell {
@@ -155,10 +152,9 @@
     list-style: square;
     padding-bottom: 10px;
     color:rgb(33, 33, 33);
-    background-color: rgb(245, 245, 245);
-    font-size: 18px;
-    border-bottom-left-radius: 2.5%;
-    border-bottom-right-radius: 2.5%;
+    background-color: rgb(186, 192, 206);
+    font-size: 16px;
+  
 }
 
 .tipsDivHTML {
@@ -174,12 +170,10 @@
 }
 
 .ULlistHTMLCSS {
-    background-color: #dfedee;
-    color:rgb(91, 88, 109);
+    background-color: #dab9bc;
+    color:black;
     padding-bottom: 10px;
-    font-size: 18px;
-    border-bottom-left-radius: 2.5%;
-    border-bottom-right-radius: 2.5%;
+    font-size: 16px;
 }
 
 /*END OF TIPS AND TRICKS LIST */
@@ -216,26 +210,66 @@ li {
 .assessHeadlineJS {
     background-color: #3A5260;
     color: #fdd900;
+    padding: 6px;
+    border-radius: 4%;
+}
 
+.assessHeadlineJS:hover {
+    color: #3A5260;
+    background-color: #f9d485;
 }
 
 .assessHeadlinePY {
     background-color: #1e6685;
     color: #ffd500;
+    padding: 6px;
+    border-radius: 4%;
+}
+
+.assessHeadlinePY:hover {
+    color: #1e6685;
+    background-color: #ffe680;
+    color: #375d78;
 }
 
 .assessHeadlineSQL {
     background-color: #3C6B65;
     color: white;
+    padding: 6px;
+    border-radius: 4%;
+    
+}
+
+.assessHeadlineSQL:hover {
+    color: #3C6B65;
+    background-color: white;
 }
 
 .assessHeadlineShell {
     background-color: #3A5260;
     color: white;
+    padding: 6px;
+    border-radius: 4%;
+}
+
+.assessHeadlineShell:hover {
+    color: #3A5260;
+    background-color: white;
 }
 
 .assessHeadlineHTML {
     background-color: #BB3C45;
     color: white;
+    padding: 6px;
+    border-radius: 4%;
+}
 
+.assessHeadlineHTML:hover {
+    color: #BB3C45;
+    background-color: white;
+}
+
+.greyListItem{
+    background-color: #eaf0f5;
+    font-size: 16px;
 }
